--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -24,7 +24,7 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
-    <NoWarn>$(NoWarn),IDE0290,IDE0130</NoWarn>
+    <NoWarn>$(NoWarn),IDE0290</NoWarn>
     <WarningsAsErrors>$(WarningsAsErrors),MVVMTK0045</WarningsAsErrors>
     <DebugType>portable</DebugType>
     <Deterministic>true</Deterministic>
