--- a/source/Fasciculus.Extensions._Dev/Fasciculus.Extensions._Dev.csproj
+++ b/source/Fasciculus.Extensions._Dev/Fasciculus.Extensions._Dev.csproj
@@ -16,11 +16,13 @@
   <ItemGroup>
     <AttributesSourceFiles Include="Attributes/*.cs" />
     <CollectionsSourceFiles Include="Collections/*.cs" />
+    <IOSourceFiles Include="IO/*.cs" />
   </ItemGroup>
 
   <Target Name="DistributeFiles" AfterTargets="Compile">
     <Copy SourceFiles="@(AttributesSourceFiles)" DestinationFolder="../Fasciculus.Extensions.Attributes" SkipUnchangedFiles="true" />
     <Copy SourceFiles="@(CollectionsSourceFiles)" DestinationFolder="../Fasciculus.Extensions.Collections" SkipUnchangedFiles="true" />
+    <Copy SourceFiles="@(IOSourceFiles)" DestinationFolder="../Fasciculus.Extensions.IO" SkipUnchangedFiles="true" />
   </Target>
 
 </Project>
