--- a/source/Fasciculus.Mathematics/Fasciculus.Mathematics.csproj
+++ b/source/Fasciculus.Mathematics/Fasciculus.Mathematics.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net9.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Fasciculus.Mathematics</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
