--- a/source/Fasciculus.Web.Extensions/Fasciculus.Web.Extensions.csproj
+++ b/source/Fasciculus.Web.Extensions/Fasciculus.Web.Extensions.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.Reflection/Fasciculus.Reflection.csproj" />
   </ItemGroup>
 
 </Project>
