--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,6 +14,7 @@
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="HtmlAgilityPack" Version="1.11.72" />
+    <PackageVersion Include="LibGit2Sharp" Version="0.31.0" />
     <PackageVersion Include="Markdig" Version="0.40.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.2" />
     <PackageVersion Include="Microsoft.Build" Version="17.13.9" />
@@ -47,7 +48,6 @@
     <PackageVersion Include="NuGet.Frameworks" Version="6.13.1" />
     <PackageVersion Include="NuGet.Protocol" Version="6.13.1" />
     <PackageVersion Include="NuGet.Versioning" Version="6.13.1" />
-    <PackageVersion Include="Nullable" Version="1.3.1" />
     <PackageVersion Include="SkiaSharp" Version="3.116.1" />
     <PackageVersion Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
     <!--<PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />-->
