--- a/source/Fasciculus.Core/Fasciculus.Core.csproj
+++ b/source/Fasciculus.Core/Fasciculus.Core.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Algorithms/Fasciculus.Algorithms.csproj" />
     <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
+    <ProjectReference Include="../Fasciculus.IO.Core/Fasciculus.IO.Core.csproj" />
   </ItemGroup>
 
   <!--
