--- a/source/Fasciculus.Assets/Fasciculus.Assets.csproj
+++ b/source/Fasciculus.Assets/Fasciculus.Assets.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
     <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
+    <ProjectReference Include="../Fasciculus.IO.Core/Fasciculus.IO.Core.csproj" />
   </ItemGroup>
 
 </Project>
