removed Fasciculus.IO

--- a/source/Fasciculus.IO.Tests/Fasciculus.IO.Tests.csproj
+++ b/source/Fasciculus.IO.Tests/Fasciculus.IO.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
+    <ProjectReference Include="../Fasciculus.IO.Binary/Fasciculus.IO.Binary.csproj" />
     <ProjectReference Include="../Fasciculus.Testing/Fasciculus.Testing.csproj" />
   </ItemGroup>
 
