--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0-windows10.0.19041.0</TargetFramework>
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
-    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
+    <ProjectReference Include="../Fasciculus.IO.Binary/Fasciculus.IO.Binary.csproj" />
     <ProjectReference Include="../Fasciculus.Mathematics/Fasciculus.Mathematics.csproj" />
     <ProjectReference Include="../Fasciculus.Maui/Fasciculus.Maui.csproj" />
     <ProjectReference Include="../Fasciculus.Text/Fasciculus.Text.csproj" />
