--- a/source/Fasciculus.Experiments.Antlr4.Gen/Fasciculus.Experiments.Antlr4.Gen.csproj
+++ b/source/Fasciculus.Experiments.Antlr4.Gen/Fasciculus.Experiments.Antlr4.Gen.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Antlr4" />
+    <PackageReference Include="Antlr4.CodeGenerator" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Fasciculus.NuGet/Fasciculus.NuGet.csproj" />
+    <ProjectReference Include="../Fasciculus.IO.Core/Fasciculus.IO.Core.csproj" />
   </ItemGroup>
 
 </Project>
