--- a/source/Fasciculus.Progress.Common/Fasciculus.Progress.Common.csproj
+++ b/source/Fasciculus.Progress.Common/Fasciculus.Progress.Common.csproj
@@ -2,25 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Fasciculus.Progress</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup>
     <Description>
       This package provides:
-      - Two classes to access special paths and directories.
-      - A set of classes and methods for working with files and directories.
-      - Extensions for working with binary streams with configurable endianness.
+      - Interfaces for working with progress reporting.
       See the README for more information.
     </Description>
   </PropertyGroup>
-
-  <Import Project="../Fasciculus.Extensions.IO/local/Fasciculus.Extensions.IO.props" />
-
-  <ItemGroup>
-    <ProjectReference Include="../Fasciculus.Algorithms/Fasciculus.Algorithms.csproj" />
-    <ProjectReference Include="../Fasciculus.Progress.Common/Fasciculus.Progress.Common.csproj" />
-  </ItemGroup>
 
   <PropertyGroup>
     <IsPackable>true</IsPackable>
