--- a/source/Fasciculus.Threading.Experiment/Fasciculus.Threading.Experiment.csproj
+++ b/source/Fasciculus.Threading.Experiment/Fasciculus.Threading.Experiment.csproj
@@ -5,4 +5,8 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Threading.Common/Fasciculus.Threading.Common.csproj" />
+  </ItemGroup>
+
 </Project>
