redesigned Fasciculus.Assets

--- a/source/Fasciculus.Assets.Generate/Fasciculus.Assets.Generate.csproj
+++ b/source/Fasciculus.Assets.Generate/Fasciculus.Assets.Generate.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0-windows10.0.19041.0</TargetFrameworks>
+    <TargetFramework>net9.0-windows10.0.19041.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <RootNamespace>Fasciculus.Assets</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.IO/Fasciculus.IO.csproj" />
   </ItemGroup>
 
 </Project>
