--- a/source/Fasciculus.Threading.Common/Fasciculus.Threading.Common.csproj
+++ b/source/Fasciculus.Threading.Common/Fasciculus.Threading.Common.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Fasciculus.Threading</RootNamespace>
+    <RootNamespace>Fasciculus</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
