--- a/source/Fasciculus.IO/Fasciculus.IO.csproj
+++ b/source/Fasciculus.IO/Fasciculus.IO.csproj
@@ -15,6 +15,7 @@
     </Description>
   </PropertyGroup>
 
+  <Import Project="../Fasciculus.Assets.Shared/Build/PackageIcon.props"/>
   <Import Project="../Fasciculus.Extensions.IO/local/Fasciculus.Extensions.IO.props" />
 
   <ItemGroup>
@@ -25,13 +26,11 @@
   <PropertyGroup>
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageIcon>fasciculus.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
-    <None Include="Properties/fasciculus.png" Pack="true" PackagePath="/" />
   </ItemGroup>
 
 </Project>
