--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -45,6 +45,7 @@
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageVersion Include="MSTest.TestAdapter" Version="3.8.2" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.8.2" />
+    <PackageVersion Include="NuGet.Configuration" Version="6.13.2" />
     <PackageVersion Include="NuGet.Frameworks" Version="6.13.2" />
     <PackageVersion Include="NuGet.Protocol" Version="6.13.2" />
     <PackageVersion Include="NuGet.Versioning" Version="6.13.2" />
