redesigned Fasciculus.Threading.TaskSafe

--- a/source/Fasciculus.Threading.TaskSafe/Fasciculus.Threading.TaskSafe.csproj
+++ b/source/Fasciculus.Threading.TaskSafe/Fasciculus.Threading.TaskSafe.csproj
@@ -6,4 +6,8 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Threading.Common/Fasciculus.Threading.Common.csproj" />
+  </ItemGroup>
+
 </Project>
