--- a/source/Fasciculus.Collections.Common/Fasciculus.Collections.Common.csproj
+++ b/source/Fasciculus.Collections.Common/Fasciculus.Collections.Common.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Fasciculus.Collections</RootNamespace>
+    <RootNamespace>Fasciculus</RootNamespace>
   </PropertyGroup>
 
   <Import Project="../Fasciculus.Extensions.Collections/local/Fasciculus.Extensions.Collections.props" />
