--- a/source/Fasciculus.NuGet.Protocol/Fasciculus.NuGet.Protocol.csproj
+++ b/source/Fasciculus.NuGet.Protocol/Fasciculus.NuGet.Protocol.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Collections.Common/Fasciculus.Collections.Common.csproj" />
     <ProjectReference Include="../Fasciculus.Threading.TaskSafe/Fasciculus.Threading.TaskSafe.csproj" />
   </ItemGroup>
 
