--- a/source/Fasciculus.NuGet.Protocol/Fasciculus.NuGet.Protocol.csproj
+++ b/source/Fasciculus.NuGet.Protocol/Fasciculus.NuGet.Protocol.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Collections.Common/Fasciculus.Collections.Common.csproj" />
+    <ProjectReference Include="../Fasciculus.NuGet.Configuration/Fasciculus.NuGet.Configuration.csproj" />
     <ProjectReference Include="../Fasciculus.Threading.TaskSafe/Fasciculus.Threading.TaskSafe.csproj" />
   </ItemGroup>
 
