--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -56,7 +56,9 @@
     <!--<PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.3" />-->
     <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
+    <PackageVersion Include="System.Text.Json" Version="9.0.3" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="9.0.3" />
+    <PackageVersion Include="Verify.MSTest" Version="28.16.0" />
     <PackageVersion Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 </Project>
