--- a/source/Fasciculus.NuGet.Tests/Fasciculus.NuGet.Tests.csproj
+++ b/source/Fasciculus.NuGet.Tests/Fasciculus.NuGet.Tests.csproj
@@ -8,12 +8,14 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="MSTest.TestAdapter" />
     <PackageReference Include="MSTest.TestFramework" />
+    <PackageReference Include="Verify.MSTest" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Nuget.Frameworks/Fasciculus.Nuget.Frameworks.csproj" />
     <ProjectReference Include="../Fasciculus.Nuget.Configuration/Fasciculus.Nuget.Configuration.csproj" />
     <ProjectReference Include="../Fasciculus.Nuget.Protocol/Fasciculus.Nuget.Protocol.csproj" />
+    <ProjectReference Include="../Fasciculus.Nuget.Repository/Fasciculus.Nuget.Repository.csproj" />
     <ProjectReference Include="../Fasciculus.Testing/Fasciculus.Testing.csproj" />
   </ItemGroup>
 
